# homedisc

./: .gitignore  CMakeLists.txt  Local.cmake  dep-config.cmake
clients/: CMakeLists.txt
clients/pc/: CMakeLists.txt
clients/pc/src/: Client.hpp  Communicator.hpp  Errors.hpp  RequestBuilder.hpp  ResponseHandler.hpp  SimpleRequests.hpp  main.cpp
clients/pc/src/tests/: RequestBuilderTest.hpp  SimpleRequestTest.hpp  tests.hpp
clients/pc/tests/: RequestBuilderTest.hpp  SimpleRequestTest.hpp  main.cpp
cmake/modules/: FindImageMagick.cmake
res/conf/: logger.conf
servers/android/HomeDiscServer/app/: build.gradle  proguard-rules.pro
servers/android/HomeDiscServer/app/src/androidTest/java/stryku/homediscserver/: ApplicationTest.java
servers/android/HomeDiscServer/app/src/main/: AndroidManifest.xml
servers/android/HomeDiscServer/app/src/main/java/stryku/homediscserver/: FilesystemEntry.java  FilesystemEntryList.java  IOUtil.java  ImportantEvent.java  ImportantEventListener.java  MD5Checksum.java  MainActivity.java  MainActivityController.java  MessageSender.java  PersonalMessage.java  Request.java  RequestHandler.java  RequestXmlParser.java  ResponseBuilder.java  ResponseFactory.java  Server.java  ServerManager.java  ServerService.java  Settings.java
servers/android/HomeDiscServer/app/src/main/res/layout/: activity_main.xml
servers/android/HomeDiscServer/app/src/main/res/values/: strings.xml
servers/pc/: .gitignore
servers/pc/src/: Base64.hpp  FileResponse.hpp  FilesListResponse.hpp  FilesystemEntry.hpp  FilesystemEntryDifference.hpp  FilesystemEntryList.hpp  FilesystemEntryListProvider.hpp  RequestHandler.hpp  main.cpp
src/: FilesystemAffect.hpp  FilesystemEntry.hpp  FilesystemEntryDifference.hpp  FilesystemEntryList.hpp  FilesystemEntryListProvider.hpp  MainFolderPath.hpp  Md5.hpp  MessageType.hpp
src/tests/: FilesystemEntryListTest.hpp  FilesystemEntryTest.hpp  tests.hpp
tests/: mainTests.cpp
